...
    private var continueButtonBottomConstraint: NSLayoutConstraint?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        continueButton.configuration = .actionButtonConfiguration(category: .primary, size: .large)
        continueButton.configuration.content.title = .plainString("Continue")
        continueButton.configuration.action = didTapContinueButton
        
        flowNavigationController.view.translatesAutoresizingMaskIntoConstraints = false
        addChild(flowNavigationController)
        view.addSubview(flowNavigationController.view)
        flowNavigationController.didMove(toParent: self)
...
