...
            tkuiNavigationBar.centerView = titleView
            let backButton = TKUINavigationBar.createBackButton(
                action: { [weak viewModel] in
                    viewModel?.presentationStyle.closeAction?()
                }
            )
            backButton.accessibilityIdentifier = "history_back_button"
            backButton.isAccessibilityElement = true
            tkuiNavigationBar.leftViews = [backButton]
        }

        setupBindings()

...
