...
            actionBar: buildActionBar()
        )
    }

    func buildAmountItem() -> TKModalCardViewController.Configuration.ListItem {
        let feeFormatted = amountFormatter.format(
            amount: OP_AMOUNT.CHANGE_DNS_RECORD,
            fractionDigits: TonInfo.fractionDigits,
            accessory: .symbol(TonInfo.symbol)
        )

        return TKModalCardViewController.Configuration.ListItem.defaultItem(
            left: "Amount",
...
            amount: BigUInt(UInt64(model.fee)),
            fractionDigits: TonInfo.fractionDigits,
            accessory: .symbol(TonInfo.symbol)
        )

        return TKModalCardViewController.Configuration.ListItem.defaultItem(
            left: "Fee",
            rightTop: .value(feeFormatted, numberOfLines: 1, isFullString: false),
            rightBottom: .value(nil, numberOfLines: 1, isFullString: false)
        )
    }

    func buildActionBar() -> TKModalCardViewController.Configuration.ActionBar {
...
