...
        )
        approximateLabel.setContentHuggingPriority(.required, for: .horizontal)
        approximateLabel.setContentCompressionResistancePriority(.required, for: .horizontal)
    }

    private func setupTextFiled() {
        textTextField.accessibilityIdentifier = "input_value"
        textTextField.font = TKTextStyle.num2.font
        textTextField.keyboardType = .decimalPad
        textTextField.setContentHuggingPriority(.defaultLow, for: .horizontal)
        textTextField.setContentCompressionResistancePriority(.defaultLow, for: .horizontal)
        textTextField.clipsToBounds = true
        textTextField.placeholder = "0"
...
        clearButton.isHidden = true
        clearButton.setContentHuggingPriority(.required, for: .horizontal)
        clearButton.setContentCompressionResistancePriority(.required, for: .horizontal)
    }

    private func setupTokenView() {
        tokenView.tokenTitleAccessibilityIdentifier = "token_title"
        tokenView.contentPadding = UIEdgeInsets(top: 8, left: 8, bottom: 8, right: 12)
        tokenView.setContentHuggingPriority(.required, for: .horizontal)
        tokenView.setContentCompressionResistancePriority(.required, for: .horizontal)
        tokenView.didTap = { [weak self] in
            self?.didTapTokenPicker?()
        }
...
