...
                    self.isSwapAnimating = false
                }
            },
            for: .touchUpInside
        )

        swapButton.accessibilityIdentifier = "switch_button"
    }

    private func setupContinueButton() {
        var continueButtonConfiguration = TKButton.Configuration.actionButtonConfiguration(
            category: .primary,
            size: .large
...
            title: .plainString(TKLocales.Actions.continueAction)
        )
        continueButtonConfiguration.action = { [weak self] in
            self?.didTapContinue?()
        }
        continueButton.configuration = continueButtonConfiguration
        continueButton.accessibilityIdentifier = "native_swap_continue"
    }

    private func setupConstraints() {
        addSubview(navigationBar)
        addSubview(sendView)
        addSubview(receiveView)
...
