...
        }
        
        var icons: [String] {
            switch self {
            case .creditCard: ["PaymentIcons/Mastercard", "PaymentIcons/Visa"]
            case .creditCardRUB: ["PaymentIcons/Mir"]
            case .CryptoCurrency: ["PaymentIcons/Crypto"]
            case .ApplePay: ["PaymentIcons/ApplePay"]
            }
        }
        
        var availableForSell: Bool {
            switch self {
...
