...
  required init?(coder: NSCoder) {
    fatalError("init(coder:) has not been implemented")
  }
  
  override func viewDidLoad() {
    super.viewDidLoad()
    title = "Amount"
    view.backgroundColor = .Background.page
    
    setup()
    setupBindings()
    setupViewEventsBinding()
    viewModel.viewDidLoad()
...
    addChild(amountInputViewController)
    customView.embedAmountInputView(amountInputViewController.view)
    amountInputViewController.didMove(toParent: self)
    
    var maxButtonConfiguration = TKButton.Configuration.titleHeaderButtonConfiguration(category: .secondary)
    maxButtonConfiguration.backgroundColors[.selected] = .Button.primaryBackground
    maxButtonConfiguration.content.title = .plainString("MAX")
    maxButtonConfiguration.action = { [weak customView, weak viewModel] in
      customView?.maxButton.isSelected.toggle()
      viewModel?.toggleMax()
    }
    customView.maxButton.configuration = maxButtonConfiguration
  }
...
