...
  }
}

private extension SendCommentViewController {
  func setup() {
    var configuration = TKButton.Configuration.titleHeaderButtonConfiguration(category: .tertiary)
    configuration.content.title = .plainString("Paste")
    configuration.action = { [weak viewModel] in
      viewModel?.didTapPasteButton()
    }
    customView.pasteButton.configuration = configuration
  }
  
...
