...
        }
    }

    func setupCornerRadius(isFirst: Bool, isLast: Bool) {
        let maskedCorners: CACornerMask
        let isMasksToBounds: Bool
        switch (isFirst, isLast) {
        case (true, true):
            maskedCorners = [.layerMinXMinYCorner, .layerMaxXMinYCorner, .layerMinXMaxYCorner, .layerMaxXMaxYCorner]
            isMasksToBounds = true
        case (false, true):
            maskedCorners = [.layerMinXMaxYCorner, .layerMaxXMaxYCorner]
            isMasksToBounds = true
...
